Make form vertical

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css">
     </head>
     <body>
+        <div class="full-form">
             <img src="images/google_logo.png" alt="Google Logo" width="272px" height="110px" class="logo">
             <div class="form">
                 <form>
@@ -14,5 +15,6 @@
                         <button type button-"button">I'm feeling lucky</button>
                 </form>
             </div>
+        </div>
     </body>
 </html>
