--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
             <div class="form">
                 <form>
                     <input type="text">
-                        <button type button-"button">Search </button>
-                        <button type button-"button">I'm feeling lucky</button>
+                        <div class="buttons">
+                            <button type button-"button">Search </button>
+                            <button type button-"button">I'm feeling lucky</button>
+                        </div>
                 </form>
             </div>
         </div>
