--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
         <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css">
     </head>
     <body>
+        <div class="nav-bar">
+            <ul>
+                <li>
+                     <a href="#">
+                         <img src="images/apps-icon.png" alt="apps logo" width="20px" height="20px">
+                    </a>
+                </li>
+                <li><a href="#">Images</a></li>
+                <li><a href="#">Gmail</a></li>
+            </ul>
+        </div>
         <div class="full-form">
             <img src="images/google_logo.png" alt="Google Logo" width="272px" height="110px" class="logo">
             <div class="form">
