--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
             Google
         </title>
         <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css">
+        <link rel="icon" href="images/google-icon.png">
     </head>
     <body>
         <div class="nav-bar">
@@ -21,13 +22,24 @@
             <img src="images/google_logo.png" alt="Google Logo" width="272px" height="110px" class="logo">
             <div class="form">
                 <form>
-                    <input type="text">
+                    <div class="search-bar">
+                        <input type="text">
+                    </div>
                         <div class="buttons">
-                            <button type button-"button">Search </button>
+                            <button type button-"button">Google Search</button>
                             <button type button-"button">I'm feeling lucky</button>
                         </div>
                 </form>
             </div>
+        </div>
+        
+        <div class="footer">
+            <ul>
+               <li><a href="#">Advertising</a></li>
+               <li><a href="#">Business</a></li>
+               <li><a href="#">About</a></li>
+               <li><a href="#">How Search Works</a></li>
+            </ul>
         </div>
     </body>
 </html>
