Add hover effect on button

--- a/index.html
+++ b/index.html
@@ -26,8 +26,14 @@
                         <input type="text">
                     </div>
                         <div class="buttons">
-                            <button type button-"button">Google Search</button>
-                            <button type button-"button">I'm feeling lucky</button>
+                            <button type="button">
+                                <a href="#">Google Search</a>
+                            </button>
+                            <button type="button">
+                                <a href="#">
+                                    I'm feeling lucky
+                                </a>
+                            </button>
                         </div>
                 </form>
             </div>
