Add hover effect on top navbar

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
         <link rel="icon" href="images/google-icon.png">
     </head>
     <body>
-        <div class="nav-bar">
-            <ul>
+            <ul class="top-nav">
                 <li>
                      <a href="#">
                          <img src="images/apps-icon.png" alt="apps logo" width="20px" height="20px">
@@ -17,7 +16,6 @@
                 <li><a href="#">Images</a></li>
                 <li><a href="#">Gmail</a></li>
             </ul>
-        </div>
         <div class="full-form">
             <img src="images/google_logo.png" alt="Google Logo" width="272px" height="110px" class="logo">
             <div class="form">
