Add other languages text

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                                 </a>
                             </button>
                         </div>
+                        <div class="other-language">
+                            <p>Google offered in <a href="#">қазақ</a>  <a href="#">русский</a></p>
+                        </div>
                 </form>
             </div>
         </div>
