remove and add simple nav bar

--- a/index.html
+++ b/index.html
@@ -7,15 +7,11 @@
         <link rel="icon" href="images/google-icon.png">
     </head>
     <body>
-            <ul class="top-nav">
-                <li>
-                     <a href="#">
-                         <img src="images/apps-icon.png" alt="apps logo" width="20px" height="20px">
-                    </a>
-                </li>
-                <li><a href="#">Images</a></li>
-                <li><a href="#">Gmail</a></li>
-            </ul>
+        <div class="topnav">
+                    <a href="#">Menu</a>
+                    <a href="#">Images</a>
+                    <a href="#">Gmail</a>
+        </div>
         <div class="full-form">
             <img src="images/google_logo.png" alt="Google Logo" width="272px" height="110px" class="logo">
             <div class="form">
@@ -34,19 +30,10 @@
                             </button>
                         </div>
                         <div class="other-language">
-                            <p>Google offered in <a href="#">қазақ</a>  <a href="#">русский</a></p>
+                            <p>Google offered in: <a href="#">қазақ</a>  <a href="#">русский</a></p>
                         </div>
                 </form>
             </div>
-        </div>
-        
-        <div class="footer">
-            <ul>
-               <li><a href="#">Advertising</a></li>
-               <li><a href="#">Business</a></li>
-               <li><a href="#">About</a></li>
-               <li><a href="#">How Search Works</a></li>
-            </ul>
         </div>
     </body>
 </html>
