Add bottom nav-bar

--- a/index.html
+++ b/index.html
@@ -35,5 +35,18 @@
                 </form>
             </div>
         </div>
+
+        <div class="footer">
+                <a href="#"">Advertising</a>
+                <a href="#">Business</a>
+                <a href="#">About</a>
+                <a href="#">How Search works</a>
+
+                <div class="left-text">
+                        <a href="#"">Privacy</a>
+                        <a href="#">Terms</a>
+                        <a href="#">Settings</a>
+                </div>
+              </div>
     </body>
 </html>
