Add country nav-bar

--- a/index.html
+++ b/index.html
@@ -48,5 +48,8 @@
                         <a href="#">Settings</a>
                 </div>
               </div>
+        <div class="kz-bar">
+            Kazakhstan
+        </div>
     </body>
 </html>
