--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
     </head>
     <body>
             <div class="topnav">
-                        <a href="#">Menu</a>
-                        <a href="#">Images</a>
-                        <a href="#">Gmail</a>
+                        <a href="#">
+                            <img src="images/user.png" alt=" user image" id=user-image>
+                        </a>
+                        <a href="#">
+                            <img src="images/apps.png" alt="app icon" id="app-image">
+                        </a>
+                    <div id="text">
+                            <a href="#">Images</a>
+                            <a href="#">Gmail</a>
+                    </div>
             </div>
             <div class="full-form">
                 <img src="images/google_logo.png" alt="Google Logo" width="272px" height="110px" class="logo">
