add microphone icon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         </title>
         <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css">
         <link rel="icon" href="images/google-icon.png">
+        <script src="https://kit.fontawesome.com/d5596ac8ec.js"></script>
     </head>
     <body>
             <div class="topnav">
@@ -24,7 +25,8 @@
                 <div class="form">
                     <form>
                         <div class="search-bar">
-                            <input type="text">
+                            <input type="text" id="searchBar">
+                            <i class="fas fa-microphone"></i>
                         </div>
                             <div class="buttons">
                                 <button type="button">
